k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-devops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloud-devops-app
  template:
    metadata:
      labels:
        app: cloud-devops-app
    spec:
      containers:
        - name: cloud-devops-app
          image: rishitha-cloud201/cloud-devops-app:latest
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
