k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-devops-service
spec:
  type: LoadBalancer
  selector:
    app: cloud-devops-app
  ports:
    - port: 80
      targetPort: 5000
